--- a/styling2.css
+++ b/styling2.css
@@ -11,15 +11,14 @@ body {
 h3 {
     font-size: 30px;
 }
-section {
+.common {
     display:flex;
-   padding-left: 4%;
-   margin-bottom: 100px;
-
-
+    padding-left: 4%;
+    margin-bottom: 100px;
 }
+
 .s1 {
-    background-image:url("jhankar image/top-banner.png");
+   background-image:url("jhankar image/top-banner.png");
     background-repeat: no-repeat;
 }
 .first {
@@ -50,4 +49,29 @@ section {
     background-image: url("jhankar image/dream-bg.png");
     background-repeat: no-repeat;
     background-position: right;
+}
+.ex {
+    background-image: url("jhankar image/exp-bg.png");
+    background-position:left;
+    background-repeat: no-repeat;
+}
+.shadow {
+    width: 50%;
+    margin-left: 5%;
+    margin-right: 10%;
+    box-shadow: 5px 5px 30px gray;
+    padding-left: 2%;
+    padding-right: 1%;
+    border-radius: 15px;
+
+}
+#d1 {
+    border-left: 5px solid;
+    border-image: linear-gradient(blue,red );
+    border-image-slice: 1;
+}
+#d2 {
+    border-left: 5px solid;
+    border-image: linear-gradient(blue,orange);
+    border-image-slice: 1;
 }
